[package]
name = "quickcheck_triangle"
version = "0.1.0"
authors = ["J. Logan Dimond"]
edition = "2018"
license = "MPL-2.0"
description = "Simple macros for testing triangle inequality in metric spaces"
repository = "https://github.com/Lambda-Logan/quickcheck_triangle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickcheck = "1"
